added base changes for the server status API
